# libdefer

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  defer.c  defer.h  macros.h  package.json
include/: defer.h
test/: CMakeLists.txt  basic.c
